# stb-java

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.gradle  jitpack.yml  jitpack_setup.sh  settings.gradle
android/: build.gradle
android/src/androidTest/java/com/mumumusuc/stb/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/test/java/com/mumumusuc/stb/: ExampleUnitTest.kt
buildSrc/: build.gradle
buildSrc/src/main/groovy/com/mumumusuc/generate/: GenerateJni.groovy
core/: build.gradle
core/src/main/java/com/mumumusuc/native/: NativeLoader.kt
core/src/main/java/com/mumumusuc/stb/: StbIOCallbacks.java  StbImage.kt  StbImageNative.java
core/src/main/jni/: com_mumumusuc_stb_StbImageNative.cpp  com_mumumusuc_stb_StbImageNative.h
desktop/: build.gradle
desktop/src/test/java/com/mumumusuc/stb/: StbImageTest.kt
